# verosim

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PINNED_VERSIONS.md  README.md
corpora/: dev200.tsv  dev200_explained_pairs.tsv  holdout100.tsv  known_parse_failures.txt  lieder_all_krn.txt  perf10k.txt
corpora/hand10/: README.md  accid.krn  changes.krn  grace.krn  tiny.xml  tuplet.krn  voices.krn
corpora/hand10/expected/: accid.expected.json  changes.expected.json  chords.expected.json  grace.expected.json  grand.expected.json  keysig.expected.json  mono.expected.json  tiny.expected.json  tuplet.expected.json  voices.expected.json
corpora/mutations/: manifest.json
corpora/mutations/base/: chords.krn  grand.krn  keysig.krn  mono.krn
corpora/mutations/cases/: accid_artic_accent.krn  accid_carrier_change.krn  accid_carry_break.krn  accid_flat_drop.krn  accid_flat_to_sharp.krn  accid_natural_to_carried_flat.krn  accid_tie_f_sharps.krn  chord_member_add.krn  chord_member_delete.krn  chord_member_pitch.krn  chords_artic_staccato.krn  chords_dot_shift.krn  chords_halves_to_dotted_quarters.krn  grand_bass_delete.krn  grand_bass_octave.krn  grand_bass_pitch.krn  grand_treble_clef.krn  grand_whole_to_half.krn  keysig_add_csharp.krn  keysig_clef_bass.krn  keysig_f_explicit_n.krn  keysig_f_natural.krn  keysig_gsharp.krn  keysig_remove.krn  keysig_to_flats.krn  mono_accidental_flat.krn  mono_accidental_sharp.krn  mono_artic_staccato_tierA.krn  mono_barline_drop.krn  mono_clef.krn  mono_dot_drop.krn  mono_double_sharp.krn  mono_final_barline_double.krn  mono_flag_eighth.krn  mono_grace_end.krn  mono_head_change.krn  mono_keysig_add.krn  mono_note_delete_end.krn  mono_octave_up.krn  mono_pitch_letter.krn  (+8 more)
corpora/summaries/: dev200_active.json  dev200_experimental.json  dev200_tierA.json  dev200_tierAB.json  dev200_tierAB_dir.json  holdout100_active.json  holdout100_tierAB.json
docs/: symbol_mapping.md  validation.md
harness/: oracle_smoke.sh  pyproject.toml  run_sweep.sh  setup.sh
harness/tests/: test_corpora_invariants.py  test_corr_audit.py  test_count_tools.py  test_detail_levels.py  test_directions_audit.py  test_harness_helpers.py  test_metric_modes.py  test_oracle_drift.py  test_oracle_golden.py  test_synth_corr.py
harness/verosim_harness/: __init__.py  cache.py  corr_audit.py  count_audit.py  count_oracle.py  directions_audit.py  gates.py  gen_mutations.py  identity_audit.py  lists.py  mutcheck.py  oracle.py  perf_bench.py  robustness_audit.py  run_oracle.py  sample_corpora.py  stats.py  sweep_report.py  synth_corr.py  versions.py
include/verosim/app/: compare_options.h  score_pipeline.h
include/verosim/cli/: args.h  batch.h  check.h  compare_cli.h  count_symbols.h  dump_tree.h  list_io.h
include/verosim/engine/: block_diff.h  compare.h  edit_op.h  interner.h  myers.h  note_diff.h  set_distance.h
include/verosim/extraction/: effective_pitch.h  extract.h  notation_rules.h  score_normalizer.h  source_format_util.h  typed_space_policy.h  vrv_bridge.h
include/verosim/model/: detail_tier.h  duration.h  fraction.h  metric_mode.h  sym_score.h
include/verosim/support/: json_util.h
include/verosim/visual/: html_report.h  score_renderer.h  svg_annotator.h  svg_bundle.h  svg_overlap.h  svg_selector.h  svg_symbol_index.h  visual_mark.h  visual_plan.h  visual_report.h  visual_resolver.h  visualize.h
src/app/: score_pipeline.cpp
src/cli/: args.cpp  batch.cpp  check.cpp  compare_cli.cpp  count_symbols.cpp  dump_tree.cpp  list_io.cpp  main.cpp
src/engine/: block_diff.cpp  compare.cpp  interner.cpp  myers.cpp  note_diff.cpp  set_distance.cpp
src/extraction/: barline_extraction.cpp  control_extraction.cpp  effective_pitch.cpp  event_extraction.cpp  extract.cpp  extract_detail.h  extract_internal.h  extract_state.h  extractor.h  measure_emission.cpp  meter_context.cpp  notation_rules.cpp  pitch_context.cpp  score_normalizer.cpp  signature_extraction.cpp  typed_space_policy.cpp  vrv_bridge.cpp  vrv_includes.h
src/model/: detail_tier.cpp  metric_mode.cpp  sym_score.cpp
src/visual/: html_report.cpp  score_renderer.cpp  svg_annotator.cpp  svg_bundle.cpp  svg_overlap.cpp  svg_symbol_index.cpp  visual_mark.cpp  visual_plan.cpp  visual_resolver.cpp  visualize.cpp
tests/: CMakeLists.txt  engine_fixtures.h  test_check.cpp  test_cli_args.cpp  test_engine_identity.cpp  test_engine_units.cpp  test_extract.cpp  test_fraction.cpp  test_hand10.cpp  test_mutation_gate.cpp  test_notation_rules.cpp  test_smoke.cpp  test_visual.cpp
tests/fixtures/: cross_measure_beamspan.mei  inline_meter.mei  mei_controls.mei  overlapping_beamspans.mei  repair_space_beamspan.mei  single_number.xml  tie_chain.krn  tiny.krn  warn.krn
